# valkana

./: .gitignore  .npmignore  CMakeLists.txt  Dockerfile  README.md  build.sh  package.json
.github/workflows/: build-jsdoc.yaml  publish-docker.yaml  publish-npm.yaml  run-tests.yaml
docs/: global.html  index.html  jsdoc.config.json  validate.js.html  wasm.js.html
js/: index.js  validate.js  wasm.js
src/: validate.cpp
tests/: validate.test.js
